@@ -103,6 +103,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - macbuild.sh: add new get_nesting_level() helper function.
     - macbuild.sh: add new repeat_str() helper function.
     - macbuild.sh: refactor nxproxy detection to use MACPORTS_PREFIX.
+    - macbuild.sh: add EXE_DIR and FRAMEWORKS_DIR internal variables. Create
+      directories based on that. Use them when bundling.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
